# c0-py

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/c0/: __init__.py  _c0module.c
tests/: test_basic.py  test_conformance.py
